--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     build: .
     environment:
       - RAILS_ENV=production
+      - RAILS_SERVE_STATIC_FILES=public
       - SECRET_KEY_BASE=8ea360b9c9f1fd8686e20bcf0e02ddcbcd78ad5984559739e04f343d79e44d3cecb09a2b930d0c78bfc5778026b7905a414222f43dd24db86fc076e43e4c35fa
     command: bundle exec rails s -p 3000 -b '0.0.0.0'
     volumes:
